# qcc

./: .env.example  .gitignore  .mcp.json.example  DISCLAIMER.md  README.md
docs/: wechat-article.html  wechat-article.md
python/: pyproject.toml
python/examples/: batch_risk_check.py  company_lookup.py
python/qcc_client/: __init__.py  cli.py  client.py  dump_inventory.py  servers.py
site/: README.md  _headers  article.html  index.html
skills/: README.md  _hermes.md  _inventory.json  _openclaw.md
skills/qcc-anchor/: SKILL.md  manifest.yaml
skills/qcc-basic-profile/: SKILL.md  manifest.yaml
skills/qcc-executive-background/: SKILL.md  manifest.yaml
skills/qcc-ipr-portfolio/: SKILL.md  manifest.yaml
skills/qcc-operation-pulse/: SKILL.md  manifest.yaml
skills/qcc-ownership-trace/: SKILL.md  manifest.yaml
skills/qcc-person-portfolio/: SKILL.md  manifest.yaml  run.py
skills/qcc-risk-screen/: SKILL.md  manifest.yaml
typescript/: package.json  tsconfig.json
typescript/examples/: batch-risk-check.ts  company-lookup.ts
typescript/src/: cli.ts  client.ts  index.ts  servers.ts
