[project]
name = "qcc-client"
version = "0.1.0"
description = "Python client for 企查查 Agent (MCP Streamable HTTP)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
skills = [
    "openpyxl>=3.1",  # needed by skills/qcc-person-portfolio/run.py
]

[project.scripts]
qcc-py = "qcc_client.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qcc_client"]
